Got basic posting tweets function working

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
 </head>
 <main>
-    <input type="text">
+    <input type="text" id="messageInput">
     <button id="submit">Submit</button>
 </main>
 
