--- a/popup.html
+++ b/popup.html
@@ -6,22 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        main {
-            width: 300px;
-            height: 300px;
-            border: 1px solid black;
-        }
-    </style>
+
+    <link rel="stylesheet" href="popup.css">
 
 </head>
-<main>
-    <input type="text" id="messageInput">
-    <button id="submit">Submit</button>
-</main>
 
 <body>
-
+    <main>
+        <div>
+            <input type="text" id="messageInput">
+            <button id="submit">TWEET</button>
+        </div>
+        <div>
+            <img id="logo" src="Icon.png">
+        </div>
+        <div>
+            <a href="https://www.twitter.com" id="twitter">Twitter Homepage</a>
+        </div>
+    </main>
 </body>
 <script src="popup.js"></script>
 
